
    ASIM_MAX_EVICTS     -- maximum number of files to evict each cleanup

----------
spartha1    Date: Mon Aug 24 14:19:11 EDT 2009  CSN: CSN-awb-330
                  Mon Aug 24 18:19:11 UTC 2009


Directory libperl/Asim/lib/Asim/Batch
 NetbatchRemote.pm         Locally Modified          329 

Directory tools/scripts
 asim-run                  Locally Modified          329 

Updating with asim-awb changes (rev. 2796 - Carl Beckmann)

- some minor changes to support remote netbatch with parallel simulation

----------
spartha1    Date: Mon Aug 24 14:22:11 EDT 2009  CSN: CSN-awb-331
                  Mon Aug 24 18:22:11 UTC 2009


Directory tools/scripts
 asim-run                  Locally Modified          330 

Updating with asim-awb changes (rev. 2798 - Carl Beckmann)

- A small change which allows you to reserve all cores on a netbatch host
  with NETBATCH_MT_RESERVE_All_CORES=1 even if the minimum number of cores
  is set to only 1 with NETBATCH_MT_SLOTS_PER_CORE=1

----------
emer        Date: Mon Aug 24 19:34:05 EDT 2009  CSN: CSN-awb-332
                  Mon Aug 24 23:34:05 UTC 2009


Directory tools/scripts
 asim-run                  Locally Modified          331 

Revert changes in r330, which broke asim-run.

----------
emer        Date: Tue Aug 25 18:51:16 EDT 2009  CSN: CSN-awb-333
                  Tue Aug 25 22:51:16 UTC 2009


Directory tools/awb/apm-edit
 apm_edit.ui.h             Locally Modified          332 
 apm_edit.ui               Locally Modified          332 

Minor apm-edit improvements:

* Added column with 'flags' for each module in model
** Flag 'p' -> module has a non-default parameter value
** Flag 'n' -> module has notes
* Tabs titles in info box show a star (*) if there are:
** Non-default parameters
** Non-empty notes
* Selective opening of files in 'Files' tab of info box
** Double click on line, or
** Select line and click open button
** Context menu in alternatives list box still opens all files